--- a/NEWS
+++ b/NEWS
@@ -1,17 +1,19 @@
 VERSION	NEWS
-0.99.16 replaced dependency on ROCR with ROC (bioconductor) package
+1.0.1	corrected error in combo.R (thanks to Marco Boks for bug report)
+
+0.99.16	replaced dependency on ROCR with ROC (bioconductor) package
         seabird() no longer takes a vector for the stop argument
 
-0.99.15 codoc corrections.  
+0.99.15	codoc corrections.  
         temporarily removed dependency on ROCR (and thus gdata)
 
-0.99.14 MethylSet methods [dn]a[st]e[nt] now return objects containing 
+0.99.14	MethylSet methods [dn]a[st]e[nt] now return objects containing 
         normalized intensities as well as betas
         fixed a bug in as.methylumi
 
-0.99.13 fixed swan wrapper generic and MethyLumiSet method bugs 
+0.99.13	fixed swan wrapper generic and MethyLumiSet method bugs 
 
-0.99.12 methods d**** now have ... argument so that data without
+0.99.12	methods d**** now have ... argument so that data without
         Sentrix IDs should work (thanks to Elodie Portales-Casamar
         for bug report).
 
