added CITATION file and man page corrections, bump to 1.03
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_12/madman/Rpacks/wateRmelon@77240 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,7 @@
 VERSION	NEWS
+
+1.03	paper is out in BMC Genomics.  CITATION file added.
+
 1.0.2	fixed bug in danes generic, now works with methylumi objects again. Thanks to Joana Viana for bug report.
 
 1.0.1	corrected error in combo.R (thanks to Marco Boks for bug report)
